--- a/Bonfire/Views/SeedsWindow.xaml
+++ b/Bonfire/Views/SeedsWindow.xaml
@@ -231,11 +231,7 @@
                                Width="190" Text="Примечание" />
         <TextBox Grid.Row="3" Grid.Column="2" Margin="704,70,0,0" Style="{StaticResource SeedsTextBoxStyle}"
                   Width="190" Height="72" TextAlignment="Left" TextWrapping="Wrap" MaxLength="112"
-                  Text="{Binding AddNote, UpdateSourceTrigger=PropertyChanged}">
-                <i:Interaction.Behaviors>
-                    <templates:SelectAllTextOnFocusBehavior />
-                </i:Interaction.Behaviors>
-        </TextBox>
+                  Text="{Binding AddNote, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBlock Grid.Row="3" Grid.Column="1" Margin="92,115,0,0" Style="{StaticResource SeedsTextBlockStyle}"
                    Text="Ед. измерения" Grid.ColumnSpan="2" />
         <ComboBox Grid.Row="3" Grid.Column="1" Margin="92,145,0,0" Style="{StaticResource SeedsComboBoxStyle}"
@@ -243,27 +239,15 @@
         <TextBlock Grid.Row="3" Grid.Column="2" Margin="160,115,0,0" Style="{StaticResource SeedsTextBlockStyle}"
                                Width="110" Text="Кол-во в упаковке" />
         <TextBox Grid.Row="3" Grid.Column="2" Margin="160,145,0,0" Style="{StaticResource SeedsTextBoxStyle}"
-                  Text="{Binding AddQuantityInPac, UpdateSourceTrigger=PropertyChanged}" >
-            <i:Interaction.Behaviors>
-                <templates:SelectAllTextOnFocusBehavior />
-            </i:Interaction.Behaviors>
-        </TextBox>
+                  Text="{Binding AddQuantityInPac, UpdateSourceTrigger=PropertyChanged}" />
         <TextBlock Grid.Row="3" Grid.Column="2" Margin="300,115,0,0" Style="{StaticResource SeedsTextBlockStyle}"
                     Width="110" Text="Кол-во упаковок" />
         <TextBox Grid.Row="3" Grid.Column="2" Margin="300,145,0,0" Style="{StaticResource SeedsTextBoxStyle}"
-                 Text="{Binding AddQuantityPac, UpdateSourceTrigger=PropertyChanged}" >
-            <i:Interaction.Behaviors>
-                <templates:SelectAllTextOnFocusBehavior />
-            </i:Interaction.Behaviors>
-        </TextBox>
+                 Text="{Binding AddQuantityPac, UpdateSourceTrigger=PropertyChanged}" />
         <TextBlock Grid.Row="3" Grid.Column="2" Margin="440,115,0,0" Style="{StaticResource SeedsTextBlockStyle}"
                     Width="110" Text="Стоимость семян" />
         <TextBox Grid.Row="3" Grid.Column="2" Margin="440,145,0,0" Style="{StaticResource SeedsTextBoxStyle}"
-                 Text="{Binding AddCostPack, UpdateSourceTrigger=PropertyChanged}" >
-            <i:Interaction.Behaviors>
-                <templates:SelectAllTextOnFocusBehavior />
-            </i:Interaction.Behaviors>
-        </TextBox>
+                 Text="{Binding AddCostPack, UpdateSourceTrigger=PropertyChanged}" />
         <TextBlock Grid.Row="3" Grid.Column="2" Margin="570,115,0,0" Style="{StaticResource SeedsTextBlockStyle}"
                     Width="100" Text="Годен до:" />
         <DatePicker Grid.Row="3" Grid.Column="2" Margin="570,145,0,0" Style="{StaticResource SeedsDatePickerStyle}"
