--- a/Bonfire/Templates/SeedsViewStyle.xaml
+++ b/Bonfire/Templates/SeedsViewStyle.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-                    xmlns:templates="clr-namespace:Bonfire.Templates">
+                    xmlns:templates="clr-namespace:Bonfire.Templates"
+                    xmlns:collections="clr-namespace:System.Collections;assembly=System.Runtime">
 
     <Style x:Key="SeedsChoiceButtonStyle" TargetType="Button">
         <Setter Property="Width" Value="40"/>
@@ -83,7 +84,13 @@
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="TextAlignment" Value="Center"/>
-        
+        <Setter Property="templates:BehaviorInStyleAttacher.Behaviors">
+            <Setter.Value>
+                <collections:ArrayList>
+                    <templates:SelectAllTextOnFocusBehavior/>
+                </collections:ArrayList>
+            </Setter.Value>
+        </Setter>
 
     </Style>
     
@@ -94,6 +101,8 @@
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="SelectedDateFormat" Value="Short"/>
     </Style>
-   
+
+    
+
 
 </ResourceDictionary>
