--- a/Bonfire/Templates/DataGridStyle.xaml
+++ b/Bonfire/Templates/DataGridStyle.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:templates="clr-namespace:Bonfire.Templates"
+                    xmlns:collections="clr-namespace:System.Collections;assembly=System.Runtime">
     
     <Style x:Key="CenterGridHeaderStyle" TargetType="DataGridColumnHeader">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -24,6 +26,7 @@
                 </Style>
             </Setter.Value>
         </Setter>
+        
 
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
        
